[package]
name = "serde_json_lenient-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json_lenient = { path = ".." }

[[bin]]
name = "from_slice"
path = "fuzz_targets/from_slice.rs"

# Prevent this from interfering with workspaces
[workspace]
