[package]
name = "serde_json_test"
version = "0.0.0"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_jsonrc = { path = "../.." }

[features]
arbitrary_precision = ["serde_jsonrc/arbitrary_precision"]
preserve_order = ["serde_jsonrc/preserve_order"]
raw_value = ["serde_jsonrc/raw_value"]
unbounded_depth = ["serde_jsonrc/unbounded_depth"]
