[package]
name = "serde_json_test"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_json_lenient = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_json_lenient/std"]
alloc = ["serde_json_lenient/alloc"]
preserve_order = ["serde_json_lenient/preserve_order"]
arbitrary_precision = ["serde_json_lenient/arbitrary_precision"]
raw_value = ["serde_json_lenient/raw_value"]
unbounded_depth = ["serde_json_lenient/unbounded_depth"]
